crates/editor-codec-macros/tests/compile_fail/closed_with_unknown.stderr
error: closed enum must not have an unknown variant
  --> tests/compile_fail/closed_with_unknown.rs:9:5
   |
 9 | /     #[durable(unknown)]
10 | |     Unknown(UnknownPayload),
   | |___________________________^
